--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1972,10 +1972,11 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 
 	.sec2 {@include sec-default(); background-color: lighten($blue, 20%); position: relative;z-index: 0; padding:30px 0 50px;
+		// background-image:url('./vision.jpg');background-position: center left; background-repeat: no-repeat; background-size: 100%;
 		&::before {@include before(); height: 200px; background-color: $white;}
 	}
 
-	.form {width: 50%;@include center-block(); max-width:750px; padding: 10px 20px; background-color: $blue;
+	.form {width: 50%;@include center-block(); max-width:750px; padding: 10px 20px; background-color: darken($blue, 10%);
 		p span {font-style: italic; color: $white; font-size: 14px;}
 	}
 	.notice {color: red;}
@@ -1984,60 +1985,55 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 	.form-group {@include sec-default();
 		&.message {width: 100%; @include center-block();}
-		&.submit {width: 100%; @include center-block(); font-size: 16px; .send-message {background-color: $dark; color: $white; padding: 10px 5px; text-transform: uppercase; @include tshadowl($dark);}}
+		&.submit {width: 100%; @include center-block(); font-size: 16px; font-weight: bold;
+			.send-message {background-color: $dark; color: $white; padding: 10px 5px; text-transform: uppercase; @include tshadowl($dark);letter-spacing: .4px !important;}
+		}
 
-		p {font-size: 14px; margin-bottom: 4px; color: $light;}
-		p.types { margin-bottom:4px; font-size: 15px; label{font-weight: 600;}}
+		p {font-size: 16px; margin-bottom: 4px; color: $light;}
+		// p.types { margin-bottom:4px; font-size: 15px; label{font-weight: 600;}}
 		input,textarea {width:100%; background-color: $offwhite; padding: 5px; border: none; color: #000;}
 		textarea {height: 90px;}
 	}
-	.form-group.problems{
+	.form-group.problems, .form-group.drug{
 		label, input{display: inline;}
 		input{float:left; width:20px; margin-right: 5px;}
 		p{margin-bottom: 7px;}
 	}
 
+	@media (max-width:1200px){
+	.form {width: 70%;}
+	}
 
 	@include bp(tb) {
 		.header-new {padding-bottom: 10px;}
-		.form {margin-top: 30px;}
+		.sec1 .txt {width: 90%;}
+		.form {width:85%;}
+	}
+	
+	@media (max-width:1023px){
+		h1 {font-size: 30px;}
+		h2{font-size: 25px;}
+		.form{max-width:100%;}
+		.sec1 .txt{width:95%;padding:25px 0 10px;}
+		.sec2{padding-top:0;}
+		
 	}
 
 	@include bp(md) {
 		header.header-new .off-canvas {margin-top:0; float: right;}
-
-		.sec1 {
-			.txt {width:98%;}
-			h3.phone {width: 50%;}
-		}
-
-		.sec2::before{height: 46%;}
-		.form {margin-top: 10px; width: 40%; margin-left: 0;}
-		.form-group {width: 100%;}
 	}
 
-	@include bp(ph) {
+	@include bp(mb) {
+		h1 {font-size: 27px;}
+		h2{font-size: 23px;}
+		.form{width:100%;}
+	}
+
+	@media (max-width:639px){
 		.title-line {margin-bottom: 10px;}
-		.sec1 {
-			height: auto; background-image: none;
-			.txt {padding: 20px 0;}
-			h1 {font-size: 27px;}
-			h3, h4{font-size: 16px;}
-			h3.phone{font-size: 20px;}
-		}
+		h1 {font-size: 24px;}
+		h2{font-size: 20px;}
 
-		.form { width: 75%; @include center-block();}
-		.form-group{width: 48%;}
-		.sec2::before{display: none;}
-	}
-
-	@include bp(xs) {
-		.sec1 {
-			.container-fluid {padding:0;}
-			h1 {font-size: 24px}
-			h3, h4 {font-size: 15px; }
-			h3.phone {font-size: 18px; width: 85%;}
-		}
-		.form {width:99%;}
+		.sec1 .container-fluid {padding:0;}
 	}
 }
