--- a/app/views/claim_mailer/new_claim.text.erb
+++ b/app/views/claim_mailer/new_claim.text.erb
@@ -7,8 +7,7 @@ Email: <%= @claim.email %>
 Have you taken Elmiron? <%= @claim.drug %>
 
 Problems:
-<!-- Age-Related Macular Degeneration: <%= @claim.problems_armd %> -->
-<%= @claim.armd %>
+Age-Related Macular Degeneration: <%= @claim.problems_armd %>
 Pigmentary Maculopathy: <%= @claim.problems_pigment %>
 Blind Spots: <%= @claim.problems_blind_spots %>
 Blurred Vision: <%= @claim.problems_blurred %>
