added office emails for elmiron.

--- a/app/views/claim_mailer/new_claim.text.erb
+++ b/app/views/claim_mailer/new_claim.text.erb
@@ -6,7 +6,7 @@ Email: <%= @claim.email %>
 
 Have you taken Elmiron? <%= @claim.drug %>
 
-Problems:
+Problems Experienced:
 Age-Related Macular Degeneration: <%= @claim.problems_armd %>
 Pigmentary Maculopathy: <%= @claim.problems_pigment %>
 Blind Spots: <%= @claim.problems_blind_spots %>
@@ -18,4 +18,5 @@ Problems Seeing at Night: <%= @claim.problems_night_vision %>
 Other Retinal Damage: <%= @claim.problems_other_retinal %>
 Other Vision Damage: <%= @claim.problems_other_vision %>
 
-Case Details: <%= @claim.content %>
+Case Details: 
+<%= @claim.content %>
