JOTFORM ADDITION. Deleted custom forms, and added jotform

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1211,7 +1211,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 .contact {
 	.header-wrap {@include sec-default(); background-color: $dk-blue; @include sec-bgimage(); background-image: url(image_path('blur.jpg'));background-position: center right;
-		.cst-header {@include sec-default(); background-color: rgba($dark, .8);  height: 160px; padding-left: 5%; }
+		// background-size:cover;
+		.cst-header {@include sec-default();min-height:160px; background-color: rgba($dark, .8);  padding-left: 5%;}// height: 160px;
 		.title {width: 40%; float: left;}
 		h1, h3 {color: $white; @include tshadow($black); font-weight: bold; }
 		h1 {margin-bottom: 0px; }
@@ -1276,9 +1277,13 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		}
 	}
 
+	@media (max-width:1320px){
+		.header-wrap .cst-header{padding-top:40px;padding-bottom:20px;}
+	}
+
 	@include bp(tb) {
 		.header-wrap {
-			.cst-header { height: 200px; padding-left: 20px; }
+			.cst-header {padding:30px 0 20px 20px;}
 			.title {width: 60%; }
 		}
 
@@ -1308,7 +1313,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 	@include bp(md) {
 		.header-wrap {
-			.cst-header { height: 200px; padding-left: 0px; }
+			.cst-header {padding-left:0px;min-height:100%;}
 			.title {width: 100%; text-align: center;}
 		}
 
@@ -1330,7 +1335,11 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 
 	@include bp(mb) {
-		.header-wrap .cst-header { height: 160px; }
+		.header-wrap{
+			.cst-header{padding:20px 0 10px;}
+			h1{font-size:25px;}
+			h3{font-size:20px;letter-spacing:2px}
+		}
 
 		.sidebar {
 			hr.fancy {margin-bottom:20px; margin-top:15px; width:50%; &:after{height:3px;}}
@@ -1355,9 +1364,6 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 
 	@include bp(xs) {
-		h1 {font-size: 27px;}
-		h3 {font-size: 20px; letter-spacing: 1px}
-
 		.left {padding: 20px 30px 0px; }
 		.sidebar {
 			hr.fancy {margin-bottom:15px; }
@@ -1404,12 +1410,12 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		h3.phone {color: $white; letter-spacing: 1px; font-size: 25px; width: 35%; padding: 5px; font-weight: bold; background-color: $dk-blue; @include center-block();}
 	}
 
-	.sec2 {@include sec-default(); background-color: lighten($blue, 20%);
-		position: relative;z-index: 0;
-		&::before {@include before(); height: 280px; background-color: $navy;}
+	.sec2{@include sec-default();background-color:lighten($blue, 20%);position:relative;z-index:0;
+		&::before{@include before();height:50%;max-height:285px;background-color:$navy;}
 	}
 
-	.form {display:inline-block; width: 38%; margin-left: 2%;float: left; padding: 10px 20px; background-color: $blue; margin-top: -5%;
+	.form {display:inline-block; float: left; background-color: $blue; margin-top: -5%;
+		width:35%;margin-left:5%;padding:10px 30px;
 		p span {font-style: italic; color: $white; font-size: 14px;}
 	}
 	.notice {color: red;}
@@ -1432,38 +1438,57 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		textarea {height: 90px;}
 	}
 
-	.text-sec {display: inline-block;float: right; width: 58%; padding: 25px 30px 0px 10px; text-align: center;
-		p {font-size: 19px; line-height: 1.6em; font-weight:600; font-family: $lato; color:white;}
-		.top{@include sec-default(); padding: 20px 0;
-			p {width: 99%; @include center-block();}
-			img {width:15%; @include center-block(); margin-top: 10px;}
+	.text-sec{display:inline-block;width:58%;text-align:center;padding-left:30px;
+		.top{@include sec-default();padding:40px 0px; position:relative;
+			p{width:100%;@include center-block();max-width:700px;}
+			img{max-width:140px;@include center-block();margin-top:20px;}
 		}
-		.bot{@include sec-default(); margin:25px 0; padding-top: 20px;}
-		h4 {font-weight: bold; text-align: center; color: $navy; text-transform: uppercase; margin-top: 15px;}
-		h3.phone {color: $white; letter-spacing: 1px; font-size: 25px; width: 30%; padding: 5px; font-weight: bold; background-color: $dk-blue; @include center-block();}
+
+		.bot{@include sec-default();margin-top:60px;
+			p{width:90%;max-width:950px;@include center-block();}
+		}
+		
+		p{font-size:19px;line-height:1.6em;font-weight:600;font-family:$lato;color:white;}
+		h4{font-weight:bold;text-align:center;color:$navy;text-transform:uppercase;margin-top:30px;} //margin-top:15px;}
+		h3.phone{color:$white;letter-spacing:1px;font-size:25px;padding:5px;font-weight:bold;background-color:$dk-blue;@include center-block();max-width:295px;} //width:30%;}
+		br.kp{display:none;}
+	}
+
+	@media (max-width:1200px){
+		.sec2::before{max-height:330px;}
+		.form{width:38%;margin-left:2%;padding:10px;}
 	}
 
 	@include bp(xl) {
-		.sec1 {height: 500px;
-			h3.phone {width: 25%; }
-		}
-
-		.sec2::before {height: 210px;}
-		.form {width: 35%; margin-left: 5%; padding: 10px 30px; }
-		.text-sec {
-			.top {
-				p {width: 78%; float: left; display: inline-block;}
-				img {width:18%; display: inline-block; margin-top: 20px;}
-			}
+		.sec1{height:500px;
+			h3.phone{width:25%;}
 		}
 	}
 
 	@include bp(tb) {
-		.header-new {padding-bottom: 10px;}
-		.form {margin-top: 30px;}
-		.text-sec .bot {
-			br {display: none;}
-			h3.phone {width: 50%;}
+		.header-new{padding-bottom:10px;}
+		
+		.form{width:42%;}
+		.text-sec{width:54%;
+			.top img{max-width:130px;}
+			p{font-size:18px;}
+			h4{font-size:17px;}
+			h3.phone{font-size:22px;}
+		}
+	}
+
+	@media (max-width:959px){
+		.sec2::before{display:none;}
+		.form{width:80%;@include center-block();margin-top:10px;}
+		.text-sec{@include sec-default();padding:0 0 15px;
+			.top{background-color:$navy;padding:20px 20px 15px;margin-top:20px;
+				p{max-width:100%;}
+				img{width:75px;}
+			}
+			.bot{margin-top:10px;padding-top:15px;}
+
+			p,h4{font-size:16px;}
+			h3.phone{font-size:18px;}
 		}
 	}
 
@@ -1474,22 +1499,9 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			.txt {width:98%;}
 			h3.phone {width: 50%;}
 		}
-
-		.sec2::before{height: 46%;}
-		.form {margin-top: 10px; width: 40%; margin-left: 0;}
-		.form-group {width: 100%;}
-		.text-sec {width: 59%; padding: 25px 10px 0px;
-			p{font-size: 18px;}
-			.top {padding: 20px 0 0;
-				img {width: 90px;}
-			}
-			.bot{padding-top: 45px;
-				p{margin-bottom: 15px;}
-				h3.phone {width: 75%; }
-				h4{margin-top: 25px;}
-			}
-		}
 	}
+
+	@include bp(mb) {.form{width:95%;}}
 
 	@include bp(ph) {
 		.title-line {margin-bottom: 10px;}
@@ -1500,22 +1512,6 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			h3, h4{font-size: 16px;}
 			h3.phone{font-size: 20px;}
 		}
-
-		.form { width: 75%; @include center-block();}
-		.form-group{width: 48%;}
-		.sec2::before{display: none;}
-
-		.text-sec {
-			@include sec-default(); padding: 0;
-			p {font-size: 16px;}
-			.top {background-color: $navy; padding: 20px 10px; margin-top: 20px;
-				img {width: 75px;}
-			}
-			.bot {margin-top: 0px; padding-top: 15px;
-				h3.phone {font-size: 18px;}
-				h4 {font-size: 14px; margin: 5px 0 0; }
-			}
-		}
 	}
 
 	@include bp(xs) {
@@ -1525,11 +1521,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			h3, h4 {font-size: 15px; }
 			h3.phone {font-size: 18px; width: 85%;}
 		}
-		.form {width:99%;}
-	}
 
-	@include bp(xx) {
-		.form-group {width: 100%;}
+		.form{width:99%;}
 	}
 }
 
@@ -1578,10 +1571,11 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		p.cta {font-weight: bold;}
 	}
 
-	.form {
-		padding: 5px 15px 1px; background-color: $dk-blue;
-		p span {font-style: italic; color: $white; font-size: 14px;}
-	}
+	// .form {
+	// 	//padding: 5px 15px 1px; 
+	// 	background-color: $dk-blue;
+	// 	p span {font-style: italic; color: $white; font-size: 14px;}
+	// }
 	.notice {color: red;}
 	form{@include sec-default(); padding-top:10px;
 		h4{font-weight: bold; color: $light; text-align: center; text-transform: uppercase; font-size: 19px; margin-bottom: 15px; @include tshadowl($dark);}
@@ -1606,7 +1600,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			.container-fluid {width:80%; @include center-block();}
 			.left {width:60%;}
 		}
-		.form {margin-top: -15%;}
+		// .form {margin-top: -15%;}
 	}
 
 	@media (min-width: 1280px) and (max-width: 1499px) {
@@ -1621,7 +1615,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			// #accordeon, #solo {display: inline-block; float: left; width:39%; padding-right: 10px; margin-top: 30px;}
 			#solo {float: right; padding-right: 0;}
 		}
-		.form {margin-top: -60%;}
+		// .form {margin-top: -60%;}
 	}
 
 	@include bp(tb) {
@@ -1714,6 +1708,13 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 		.wte-s1 { padding: 15px 5px 10px;}
 	}
+}
+.wt-new{@include sec-default();padding-bottom:20px;
+	.medDef{width:90%;max-width:900px;@include center-block();}
+	.left,.right{@include sec-default();}
+
+	.right{margin:30px 0;}
+	.form{background-color:$dk-blue;}
 }
 
 
@@ -2011,8 +2012,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 	
 	@media (max-width:1023px){
-		h1 {font-size: 30px;}
-		h2{font-size: 25px;}
+		h1 {font-size: 23px;}
+		h2{font-size: 20px;}
 		.form{max-width:100%;}
 		.sec1 .txt{width:95%;padding:25px 0 10px;}
 		.sec2{padding-top:0;}
@@ -2021,18 +2022,21 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 	@include bp(md) {
 		header.header-new .off-canvas {margin-top:0; float: right;}
+
+		h1 {font-size: 19px;}
+		h2{font-size: 17px;}
 	}
 
 	@include bp(mb) {
-		h1 {font-size: 27px;}
-		h2{font-size: 23px;}
+		// h1 {font-size: 27px;}
+		// h2{font-size: 23px;}
 		.form{width:100%;}
 	}
 
 	@media (max-width:639px){
 		.title-line {margin-bottom: 10px;}
-		h1 {font-size: 24px;}
-		h2{font-size: 20px;}
+		// h1 {font-size: 24px;}
+		// h2{font-size: 20px;}
 
 		.sec1 .container-fluid {padding:0;}
 	}
