--- a/app/views/claims/new.html.erb
+++ b/app/views/claims/new.html.erb
@@ -16,79 +16,8 @@
 
   <div class="sec2">
     <div class="container-fluid">
-      <div class="form">
-        <%= form_for @claim, url: elmiron_path do |claim| %>
-          <h4>Free Elmiron Case Evaluation</h4>
-          <fieldset>
-            <% if flash[:notice] %>
-              <div class="notice"><%= flash[:notice] %></div>
-            <% end %>
-
-            <% if flash[:alert] %>
-              <div class="notice"><%= flash[:alert] %></div>
-            <% end %>
-
-            <div class="form-group name">
-              <p>*Full Name: </p>
-              <%= claim.text_field :full_name, onpaste: "return false" %>
-            </div>
-
-            <div class="form-group phone">
-              <p>*Phone Number: </p>
-              <%= claim.text_field :phone, onpaste: "return false" %>
-            </div>
-
-            <div class="form-group email">
-              <p>*Email address: </p>
-              <%= claim.email_field :email, onpaste: "return false" %>
-            </div>
-
-            <div class="form-group drug">
-              <p>*Have you taken the drug Elmiron? </p>
-              <p><%= claim.radio_button(:drug, "yes") %>
-              <%= label_tag(:drug_yes, "Yes") %></p>
-
-              <p><%= claim.radio_button(:drug, "Pigmentary Maculopathy") %>
-              <%= label_tag(:drug_no, "No") %></p>
-            </div>
-
-            <div class="form-group problems">
-              <p class="instr">*Select all eye problems you've experienced from the list below: </p>
-              <p><%= claim.check_box :problems_armd %> <%= label_tag(:problems_armd, "Age-Related Macular Degeneration") %></p>
-              <p><%= claim.check_box :problems_pigment %> <%= label_tag(:problems_pigment, "Pigmentary Maculopathy") %></p>
-              <p><%= claim.check_box :problems_blind_spots %> <%= label_tag(:problems_blind_spots, "Blind Spots") %></p>
-              <p><%= claim.check_box :problems_blurred %> <%= label_tag(:problems_blurred, "Blurred Vision") %></p>
-              <p><%= claim.check_box :problems_blindness %> <%= label_tag(:problems_blindness, "Blindness") %></p>
-              <p><%= claim.check_box :problems_dimming %> <%= label_tag(:problems_dimming, "Dimming Vision ") %></p>
-              <p><%= claim.check_box :problems_distorted %> <%= label_tag(:problems_distorted, "Distorted Wavy Vision (metamorphopsia)") %></p>
-              <p><%= claim.check_box :problems_night_vision %> <%= label_tag(:problems_night_vision, "Problems Seeing at Night") %></p>
-              <p><%= claim.check_box :problems_other_retinal %> <%= label_tag(:problems_other_retinal, "Other Retinal Damage ") %></p>
-              <p><%= claim.check_box :problems_other_vision %> <%= label_tag(:problems_other_vision, "Other Vision Damage ") %></p>
-            </div>
-
-            <div class="form-group message">
-              <p>*Please briefly describe your experience with Elmiron: </p>
-              <%= claim.text_area :content, onpaste: "return false" %>
-            </div>
-
-            <div class="form-group honey">
-              <%= label_tag :honey %>
-              <%= claim.text_field :honey %>
-              <span class="help">Do not fill in this field. It is an anti-spam measure.</span>
-            </div>
-
-            <div class="form-group recap">
-              <% if ENV["RECAPTCHA_SITE_KEY"] != nil %>
-                <%= recaptcha_tags %>
-              <% end %>
-            </div>
-
-            <div class="form-group submit">
-              <%= claim.submit "Submit", :class=> "send-message" %>
-            </div>
-          </fieldset>
-        <% end %>
-        <p><span>*All fields are required.</span></p>
+      <div class="form jform">
+        <script type="text/javascript" src="https://form.jotform.com/jsform/221674506434051"></script>
       </div>
     </div>
   </div>
