--- a/app/views/estates/new.html.erb
+++ b/app/views/estates/new.html.erb
@@ -21,69 +21,11 @@
 	  </div>
   </div>
 
-	<div class="wte-s1">
-		<div class="container-fluid">
+	<div class="wte-s1XX wt-new">
+		<div class="container-fluidXX medDef">
       <div class="right">
-        <div class="form">
-          <%= form_for @estate, url: wills_trusts_estate_path do |estate| %>
-            <h4>Free Case Evaluation</h4>
-            <fieldset>
-              <% if flash[:notice] %>
-                <div class="notice"><%= flash[:notice] %></div>
-              <% end %>
-
-              <% if flash[:alert] %>
-                <div class="notice"><%= flash[:alert] %></div>
-              <% end %>
-
-              <div class="form-group name">
-                <p>*First Name:</p>
-                <%= estate.text_field :first_name, onpaste: "return false" %>
-              </div>
-
-              <div class="form-group last-name">
-                <p>*Last Name: </p>
-                <%= estate.text_field :last_name, onpaste: "return false" %>
-              </div>
-
-              <div class="form-group phone">
-                <p>*Phone Number: </p>
-                <%= estate.text_field :phone, onpaste: "return false" %>
-              </div>
-
-              <div class="form-group email">
-                <p>*Email address: </p>
-                <%= estate.email_field :email, onpaste: "return false" %>
-              </div>
-
-              <div class="form-group address">
-                <p>*Address: </p>
-                <%= estate.text_field :address, onpaste: "return false" %>
-              </div>
-
-              <div class="form-group message">
-                <p>*Tell us about your case: </p>
-                <%= estate.text_area :content, onpaste: "return false" %>
-              </div>
-
-              <div class="form-group honey">
-                <%= label_tag :honey %>
-                <%= estate.text_field :honey %>
-                <span class="help">Do not fill in this field. It is an anti-spam measure.</span>
-              </div>
-
-              <div class="form-group recap">
-                <% if ENV["RECAPTCHA_SITE_KEY"] != nil %>
-                  <%= recaptcha_tags %>
-                <% end %>
-              </div>
-
-              <div class="form-group submit">
-                <%= estate.submit "Submit", :class=> "send-message" %>
-              </div>
-            </fieldset>
-          <% end %>
-          <p><span>*All fields are required.</span></p>
+        <div class="form jform">
+          <script type="text/javascript" src="https://form.jotform.com/jsform/221675468354060"></script>
         </div>
       </div>
 
